_build/_log
### Starting build.
# Target: main.ml.depends, tags: { extension:ml, file:main.ml, ocaml, ocamldep, quiet }
/Users/matthewrosen/.opam/cs3110-2021sp/bin/ocamldep.opt -modules main.ml > main.ml.depends # cached
# Target: dungeon.mli.depends, tags: { extension:mli, file:dungeon.mli, ocaml, ocamldep, quiet }
/Users/matthewrosen/.opam/cs3110-2021sp/bin/ocamldep.opt -modules dungeon.mli > dungeon.mli.depends # cached
# Target: dungeon.cmi, tags: { byte, compile, extension:mli, file:dungeon.mli, interf, ocaml, quiet }
/Users/matthewrosen/.opam/cs3110-2021sp/bin/ocamlc.opt -c -o dungeon.cmi dungeon.mli # cached
# Target: state.mli.depends, tags: { extension:mli, file:state.mli, ocaml, ocamldep, quiet }
/Users/matthewrosen/.opam/cs3110-2021sp/bin/ocamldep.opt -modules state.mli > state.mli.depends # cached
# Target: state.cmi, tags: { byte, compile, extension:mli, file:state.mli, interf, ocaml, quiet }
/Users/matthewrosen/.opam/cs3110-2021sp/bin/ocamlc.opt -c -o state.cmi state.mli
+ /Users/matthewrosen/.opam/cs3110-2021sp/bin/ocamlc.opt -c -o state.cmi state.mli
File "state.mli", line 7, characters 22-40:
7 | val move : current -> Glut.special_key_t -> current
                          ^^^^^^^^^^^^^^^^^^
Error: Unbound module Glut
Command exited with code 2.
# Compilation unsuccessful.
